--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-  <div class="result-container">
+  <main class="result-container">
     <!-- left/top container -->
     <div class="result">
       <h2 class="result-text text-gray fs-2">Your Result</h2>
@@ -64,7 +64,7 @@
       </div>
       <button class="btn">Continue</button>
     </div>
-  </div>
+  </main>
 
 </body>
 
